@@ -1,5 +1,10 @@
 2003-09-04  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* pp/opreport.cpp:
+	* pp/opannotate.cpp: catch op_bfd exception and recover gracefully
+
+2003-09-04  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* utils/opcontrol: tweak "signalling daemon " message as suggested
 	  by Carlo Wood
 
